z-index fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -65,7 +65,6 @@ section.modal-records {
 .date-divider span {
     position: absolute;
     height: 2rem;
-    z-index: 9;
     background-color: #abd1c6;
     padding: 0 10px;
     font-size: 2rem;
